Fix sticky header right side gap

--- a/src/stylesheets/styles.css
+++ b/src/stylesheets/styles.css
@@ -33,8 +33,8 @@ h1 small {
   width: 100%;
 
   @media (max-width: 480px) {
-    margin-left: -5vw;
-    padding-left: 5vw;
+    margin: 0 -5vw;
+    padding: 5vw;
   }
 }
 
